# ITKIOOpenSlide

./: CMakeLists.txt  README.rst  circle.yml  itk-module.cmake  pyproject.toml  setup.py
.circleci/: config.yml
cmake/: FindOpenSlide.cmake
example/: CMakeLists.txt  DumpSlideInformation.cxx  ExampleOutput.txt
examples/: CMakeLists.txt  DumpSlideInformation.cxx  ExampleOutput.txt  StreamProcessing.py
include/: itkOpenSlideImageIO.h  itkOpenSlideImageIOFactory.h
src/: CMakeLists.txt  itkOpenSlideImageIO.cxx  itkOpenSlideImageIOFactory.cxx
test/: CMakeLists.txt  itkOpenSlideImageIOTest.cxx  itkOpenSlideTestMetaData.cxx
test/Docker/: Dockerfile  build.sh  run.sh  test.sh
test/Input/: 15711_tiled.tif.md5  50232_005p.tif.md5  50232_100p.svs.md5  50232_multidataset_025p.tif.md5  CMU-1-Small-Region-label.mha.md5  CMU-1-Small-Region-label.mha.sha512  CMU-1-Small-Region.mha.md5  CMU-1-Small-Region.mha.sha512  CMU-1-Small-Region.svs.md5  CMU-1-Small-Region.svs.sha512  CMU-1-level-1-stream-200.mha.md5  CMU-1-level-1-stream-200.mha.sha512  CMU-1-level-1.mha.md5  CMU-1-level-1.mha.sha512  CMU-1.svs.md5  CMU-1.svs.sha512  CMU-1.svs.txt  CMU-1.svs.txt.md5  CMU-1.svs.txt.sha512  CMU-3-level-7.mha.md5  CMU-3-level-7.mha.sha512  CMU-3.ndpi.md5  CMU-3.ndpi.sha512  aperio_histology_sample_image.svs.md5
wrapping/: CMakeLists.txt  itkOpenSlideImageIO.wrap
wrapping/test/: CMakeLists.txt  convert_test.py
